[gd_scene load_steps=8 format=3 uid="uid://dey8x4xm453xn"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_f7mnl"]
[ext_resource type="Texture2D" uid="uid://ca8d2n3vtbasc" path="res://assets/textures/tiles2/cobble_stoneTILE.png" id="2_oih7l"]
[ext_resource type="Texture2D" uid="uid://ctomq5a2mdn0l" path="res://assets/Menus/pixil-frame-0 (6).png" id="3_m0568"]
[ext_resource type="Texture2D" uid="uid://ldoy0vg8138s" path="res://assets/Menus/VALID_Proto1k_OUTLINE.png" id="3_x40s6"]
[ext_resource type="AudioStream" uid="uid://bxbxkike56ik8" path="res://assets/audio/gui.mp3" id="4_bb3ft"]
[ext_resource type="Shader" path="res://shaders/crt.gdshader" id="5_hctds"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5huxc"]
shader = ExtResource("5_hctds")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.174
shader_parameter/scanlines_width = 0.193
shader_parameter/grille_opacity = 0.017
shader_parameter/resolution = Vector2(240, 180)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 0.934
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.552
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.24
shader_parameter/vignette_opacity = 0.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
script = ExtResource("1_f7mnl")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]

[node name="TextureRect9" type="TextureRect" parent="MeshInstance2D"]
offset_left = 192.0
offset_top = 127.932
offset_right = 256.0
offset_bottom = 191.932
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect10" type="TextureRect" parent="MeshInstance2D"]
offset_left = 128.0
offset_top = 127.932
offset_right = 192.0
offset_bottom = 191.932
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect11" type="TextureRect" parent="MeshInstance2D"]
offset_left = 64.0
offset_top = 127.932
offset_right = 128.0
offset_bottom = 191.932
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect12" type="TextureRect" parent="MeshInstance2D"]
offset_top = 127.932
offset_right = 64.0
offset_bottom = 191.932
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect5" type="TextureRect" parent="MeshInstance2D"]
offset_left = 192.0
offset_top = 63.9659
offset_right = 256.0
offset_bottom = 127.966
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect6" type="TextureRect" parent="MeshInstance2D"]
offset_left = 128.0
offset_top = 63.9659
offset_right = 192.0
offset_bottom = 127.966
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect7" type="TextureRect" parent="MeshInstance2D"]
offset_left = 64.0
offset_top = 63.9659
offset_right = 128.0
offset_bottom = 127.966
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect8" type="TextureRect" parent="MeshInstance2D"]
offset_top = 63.9659
offset_right = 64.0
offset_bottom = 127.966
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="MeshInstance2D"]
offset_left = 192.0
offset_right = 256.0
offset_bottom = 64.0
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="MeshInstance2D"]
offset_left = 128.0
offset_right = 192.0
offset_bottom = 64.0
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="MeshInstance2D"]
offset_left = 64.0
offset_right = 128.0
offset_bottom = 64.0
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="MeshInstance2D"]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_oih7l")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="MeshInstance2D"]
position = Vector2(37.8, 156.6)
scale = Vector2(0.035246, 0.035246)
texture = ExtResource("3_x40s6")

[node name="TitleRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 8.0
offset_right = 268.0
offset_bottom = 108.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_m0568")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 91.0
offset_right = 160.0
offset_bottom = 192.0
scale = Vector2(0.9, 0.9)

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 2
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 93.5
offset_top = 40.0
offset_right = 146.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Settingsback" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 97.5
offset_top = 130.0
offset_right = 142.5
offset_bottom = 161.0
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 0
offset_left = 60.0
offset_top = 20.0
offset_right = 219.0
offset_bottom = 100.0

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Full Screen"

[node name="Roll" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "VHS Roll"

[node name="Brightness" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Brightness"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
button_pressed = true

[node name="Roll" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BrightSlide" type="HSlider" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 6
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.4

[node name="VideoBack" type="Button" parent="Video"]
layout_mode = 0
offset_left = 97.5
offset_top = 130.0
offset_right = 142.5
offset_bottom = 161.0
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Audio"]
layout_mode = 0
offset_left = 60.0
offset_top = 20.0
offset_right = 193.0
offset_bottom = 100.0

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer2"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer2/Labels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer2/Labels"]
layout_mode = 2
text = "Music"

[node name="In-Game" type="Label" parent="Audio/HBoxContainer2/Labels"]
layout_mode = 2
text = "In-Game"

[node name="Monsters" type="Label" parent="Audio/HBoxContainer2/Labels"]
layout_mode = 2
text = "Monster"

[node name="Checks" type="VBoxContainer" parent="Audio/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Master" type="HSlider" parent="Audio/HBoxContainer2/Checks"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 2.0

[node name="Music" type="HSlider" parent="Audio/HBoxContainer2/Checks"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 2.0

[node name="In_Game" type="HSlider" parent="Audio/HBoxContainer2/Checks"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 2.0

[node name="Monsters" type="HSlider" parent="Audio/HBoxContainer2/Checks"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 2.0

[node name="AudioBack" type="Button" parent="Audio"]
layout_mode = 0
offset_left = 97.5
offset_top = 130.0
offset_right = 142.5
offset_bottom = 161.0
text = "Back"

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 13.0
offset_top = 5.0
offset_right = 244.0
offset_bottom = 187.0
bbcode_enabled = true
text = "[font_size=12]Game Developers:
Ian Day
Vincent Churilla

Skeleton Model/Rig: 
\"Skeleton Character PSX\" (https://skfb.ly/oQHwM) by vinrax is licensed under Creative Commons Attribution

Goblin Model:
Max Damage
https://www.patreon.com/maxdamage
https://ko-fi.com/maxdamage
https://maximumdamage.itch.io

Soundtrack (King's Feast):
RandomMind, CC0 License
[/font_size]"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 2
offset_left = 190.0
offset_top = 153.0
offset_right = 253.0
offset_bottom = 184.0
scale = Vector2(0.75, 0.75)
text = "Credits"

[node name="CreditsBackButton" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 190.0
offset_top = 153.0
offset_right = 253.0
offset_bottom = 184.0
scale = Vector2(0.75, 0.75)
text = "Back"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_5huxc")
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Gui" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bb3ft")

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Settings/Settingsback" to="." method="_on_settingsback_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Roll" to="." method="_on_roll_toggled"]
[connection signal="value_changed" from="Video/HBoxContainer/Checks/BrightSlide" to="." method="_on_bright_slide_value_changed"]
[connection signal="pressed" from="Video/VideoBack" to="." method="_on_video_back_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer2/Checks/Master" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer2/Checks/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer2/Checks/In_Game" to="." method="_on_in_game_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer2/Checks/Monsters" to="." method="_on_monsters_value_changed"]
[connection signal="pressed" from="Audio/AudioBack" to="." method="_on_audio_back_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
